Changes since 0.3:

For MySQL compatibility, accept engine and character set in CREATE TABLE
and ALTER TABLE (the former had existed in Mayfly for a while
but had not been documented; the latter is new).

For better compatibility with Hypersonic, the data type IDENTITY
now indicates an auto-increment column (that is, newly inserted
values are chosen relative to what is already in the table,
rather than as a sequence which isn't affected by table contents).

Add 
  INSERT INTO table(columns...) select-statement
syntax (used, for example, for copying data from an old table 
to a rearranged table).

Add ALTER TABLE table DROP CONSTRAINT constraint-name
  (in addition to ALTER TABLE table DROP FOREIGN KEY constraint-name
  which has been there longer).

Now support CONCAT(expression, ...) syntax for MySQL compatibility in
addition to the SQL standard expression || expression.

Add DROP INDEX. For now the syntax is a MySQL-specific one:
    DROP INDEX index-name ON table
although a future version of Mayfly might not require the "ON table".

When adding a foreign key without giving it a name, Mayfly now assigns
a name using the same scheme as MySQL: referringTable_ibfk_sequence,
where the first foreign key in this table is sequence 1, the second is 2, 
and so on.  This can be kind of ugly in dumps (although not as problematic
as if the name were set in an unpredictable way, such as based on times
or database internal state), but seems to be the best way to make
ALTER TABLE DROP FOREIGN KEY usable where a constraint name was not
initially assigned.

Add MySQL syntax for CHANGE COLUMN (which is like MODIFY COLUMN but
also allows renaming the column):
  ALTER TABLE table CHANGE COLUMN old-name column-definition

Add CREATE INDEX (with a syntax which seems compatible with most other
databases I tried):
    CREATE [UNIQUE] INDEX index-name ON table(column[(width)], ...)
As with the MySQL INDEX syntax
    CREATE TABLE(a INTEGER, INDEX(a))